--- a/.github/workflows/parallel_testing.yml
+++ b/.github/workflows/parallel_testing.yml
@@ -1,9 +1,9 @@
 name: Parallel Testing
 on: 
     workflow_dispatch:
-    pull_request:
-        branches:
-            - main
+    #pull_request:
+        #branches:
+            #- main
 jobs:
     parallel-tests:
         name: Parallel Testing Demo
