--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
+##Dependencies Directory
 node_modules
+
+##Configuration files and sensitive data
+cypress/config/development.json
+cypress/config/production.json
+cypress/config/staging.json
+
+##Cypress files
+cypress/screenshots
+cypress/videos
+cypress/results
+public
+index.json
